--- a/views/bookAppointment.hbs
+++ b/views/bookAppointment.hbs
@@ -36,7 +36,7 @@
   </div>    
   <div class="l-navbar" id="nav-bar">
       <nav class="nav">
-          <div><a href="/changepassword" class="nav_logo"> <i class="fa fa-user" aria-hidden="true"></i> <span class="nav_name"></span> </a>
+          <div><a href="/auth/editUser" class="nav_logo"> <i class="fa fa-user" aria-hidden="true"></i> <span class="nav_name"></span> </a>
               <div class="nav_list"> 
                   <a href="/stud_dash" class="nav_link"> <i class="fa fa-th" aria-hidden="true"></i><span class="nav_name">Dashboard</span> </a> 
                   <a href="/auth/bookAppointment" class="nav_link active"> <i class="fa fa-user-md" aria-hidden="true"></i> <span class="nav_name">Appointment</span> </a>
