--- a/views/hadash.hbs
+++ b/views/hadash.hbs
@@ -32,7 +32,7 @@
     </div>    
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
-            <div><a href="#" class="nav_logo"> <i class="fa fa-user" aria-hidden="true"></i> <span class="nav_name"></span> </a>
+            <div><a href="/auth/editHa" class="nav_logo"> <i class="fa fa-user" aria-hidden="true"></i> <span class="nav_name"></span> </a>
                 <div class="nav_list"> 
                     <a href="/hadash" class="nav_link active"> <i class="fa fa-th" aria-hidden="true"></i><span class="nav_name">Dashboard</span> </a> 
                     <a href="/update" class="nav_link"> <i class="fa fa-user-md" aria-hidden="true"></i> <span class="nav_name">Doctors</span> </a>
