--- a/views/register.hbs
+++ b/views/register.hbs
@@ -55,16 +55,16 @@
                             </div>
                             <div class="text sign-up-text">Already have an account? <a href="/Login">Login now</a>
                             </div>
+                    <div class="alert-container">
+                        {{#if message }}
+                            <h4 class="alert alert-danger mt-4" id="msg">{{message}}</h4>
+                        {{/if}}
+                    </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </div class="alert-container">
-        {{#if message }}
-        <h4 class="alert alert-danger mt-4">{{message}}</h4>
-        {{/if}}
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
