--- a/views/register.hbs
+++ b/views/register.hbs
@@ -53,7 +53,7 @@
                             <div class="button input-box">
                                 <input type="submit" value="Sign Up">
                             </div>
-                            <div class="text sign-up-text">Already have an account? <a href="/Login">Login now</a>
+                            <div class="text sign-up-text">Already have an account? <a href="/login">Login now</a>
                             </div>
                     <div class="alert-container">
                         {{#if message }}
