--- a/views/register.hbs
+++ b/views/register.hbs
@@ -57,7 +57,7 @@
                             </div>
                     <div class="alert-container">
                         {{#if message }}
-                            <h4 class="alert alert-danger mt-4" id="msg">{{message}}</h4>
+                            <h4 class="alert alert-danger mt-4">{{message}}</h4>
                         {{/if}}
                     </div>
                         </div>
