--- a/views/stud_dash.hbs
+++ b/views/stud_dash.hbs
@@ -79,7 +79,7 @@
                 <td>{{this.doc_name}}</td>
                 <td>{{this.doc_day}}</td>
                 <td>{{this.doc_time1}}-{{this.doc_time2}}</td>
-                <td>{{this.status}}</td>
+                <td>{{this.Status}}</td>
                 <td>{{this.problem}}</td>
             </tr>
             {{/each}}
